--- a/index.html
+++ b/index.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
-
 <html>
     <head>
         <title>Quiz para programadores</title>
         <meta name="description" content="Um quiz interativo para testar seus conhecimentos">
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <header>
-            <h1>Quiz interativopara programadores</h1>
+            <h1> Quiz interativo para programadores</h1>
             <p>Teste seus conhecimentos em programação e veja qual programação e veja qual pontuação você consegue fazer!</p>
         </header>
         <main>
@@ -159,7 +159,7 @@
             </section>
         </main>
         <footer>
-            <p>&copy Quiz de programadores. Todos os direitos reservados</p>
-            <p>Para conhecer mais sobre mim, <a href="https://www.instagram.com/raianahellmann?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">clique aqui</a><p>
+            <p class="paragrafo-footer">&copy Quiz de programadores. Todos os direitos reservados</p>
+            <p class="paragrafo-footer">Para conhecer mais sobre mim, <a href="https://www.instagram.com/raianahellmann?utm_source=ig_web_button_share_sheet&igsh=ZDNlZDc0MzIxNw==" target="_blank">clique aqui</a><p>
         </footer>
 </html>
